--- a/package.xml
+++ b/package.xml
@@ -63,6 +63,7 @@
   <exec_depend>prsg2_robot</exec_depend>
   <exec_depend>raspicam_node</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <depend>actionlib_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
